# AudioTranscriber

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  project.yml
AudioTranscriber.xcodeproj/: project.pbxproj
Resources/: AppIcon.icns  Info.plist
Scripts/: summarize.py  transcribe.py  voiceprint.py
Server/: pyproject.toml  run_server.sh
Server/deploy/: com.voicescribe.server.plist  deploy_macmini.sh
Server/tests/: conftest.py  test_app_engines.py  test_config.py  test_worker_env.py
Server/voicescribe_server/: app.py  auth.py  config.py  database.py  models.py  storage.py  system_monitor.py  worker.py
Sources/App/: AudioTranscriberApp.swift  ContentView.swift  ContentViewComponents.swift  EnvironmentChecker.swift  HistoryView.swift  KeychainStore.swift  RemoteModels.swift  RemoteTranscriberClient.swift  SettingsManager.swift  SetupView.swift  Transcriber.swift  TranscriptionHistoryEntry.swift  (+1 more)
Tests/: AtomicJSONFileStoreCheck.swift  CallRecordArchiveCheck.swift  CallRecordBatchWorkflowCheck.swift  CallRecordParserCheck.swift  CallRecordQueueCheck.swift  PersonArchiveRepositoryCheck.swift  PersonOrganizationInputCheck.swift  PersonOrganizationVersionCheck.swift  PersonSelectionDraftCheck.swift  test_summarize_output.py  test_transcribe_input.py  test_voiceprint.py
Tools/: package_macos_app.sh  package_pkg.sh
VoiceScribe.xcodeproj/: project.pbxproj
docs/: architect_product_analysis.md  conversation_role_orchestration.md  conversation_role_orchestration_zh.md  performance_tiers.md  remote_allserves_integration.md  voiceprint_model_setup.md
(+42 files in other folders)
