[project]
name = "voicescribe-server"
version = "0.1.0"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.115.14",
  "uvicorn[standard]==0.34.3",
  "python-multipart==0.0.20",
  "psutil>=5.9.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
